# cliq

./: .gitignore  flake.nix
client/: CMakeLists.txt  main.cpp
include/: protocol.hpp
server/: CMakeLists.txt  main.cpp
